--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "~10.0.6",
+    "@react-native-community/datetimepicker": "^2.4.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-community/picker": "^1.5.1",
     "@react-navigation/bottom-tabs": "^5.3.1",
@@ -31,8 +32,11 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-dialog": "^5.6.0",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal-datetime-picker": "^8.7.1",
+    "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7"
