--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "~10.0.6",
-<<<<<<< HEAD
     "@react-native-community/datetimepicker": "^2.4.2",
-=======
-    "@react-native-community/datetimepicker": "^2.4.0",
->>>>>>> 2c8c03b89a99082a4e47edeac45aeebab40d873c
     "@react-native-community/masked-view": "0.1.6",
     "@react-native-community/picker": "^1.5.1",
     "@react-navigation/bottom-tabs": "^5.3.1",
@@ -43,7 +39,8 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-linear-gradient": "~8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
