--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-font": "~8.1.0",
     "expo-google-app-auth": "^8.1.0",
     "expo-google-sign-in": "^8.1.0",
+    "expo-image-picker": "^8.3.0",
+    "expo-linear-gradient": "~8.1.0",
     "expo-linking": "^1.0.1",
     "expo-splash-screen": "^0.2.3",
     "expo-web-browser": "~8.2.0",
@@ -39,8 +41,7 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7",
-    "expo-linear-gradient": "~8.1.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
