--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-dialog": "^5.6.0",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-modal-datetime-picker": "^8.7.1",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "0.7.3",
