--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^10.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
