--- a/app.json
+++ b/app.json
@@ -22,6 +22,16 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "android": {
+      "package": "com.sangdaero.app",
+      "versionCode": 1,
+      "googleServicesFile": "./google-services.json",
+      "config" :{
+        "googleSignIn" : {
+          "apiKey" : "AIzaSyC4L9jRpIEXoFBftOJ4n_SFuMpSpCouTH0"
+        }
+      }
+    },
     "ios": {
       "supportsTablet": true
     },
