--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "expo-google-app-auth": "^8.1.0",
-    "expo-google-sign-in": "^8.1.0",
+    "expo-google-sign-in": "~8.1.0",
     "expo-image-picker": "^8.3.0",
     "expo-linear-gradient": "~8.1.0",
     "expo-linking": "^1.0.1",
