--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^10.3.2"
+    "react-native-webview": "^10.3.2",
+    "expo-notifications": "~0.1.1",
+    "expo-permissions": "~8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
