--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Sangdaero",
+    "name": "상대로",
     "slug": "sangdaero",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "orientation": "portrait",
     "scheme": "myapp",
     "platforms": [
@@ -24,7 +24,7 @@
     ],
     "android": {
       "package": "com.sangdaero.app",
-      "versionCode": 1,
+      "versionCode": 3,
       "useNextNotificationsApi": true,
       "googleServicesFile": "./google-services.json",
       "config" :{
